--- a/react-3d-model/src/App.css
+++ b/react-3d-model/src/App.css
@@ -1,7 +1,29 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: black;
 }
 
 canvas {
     height: 100vh;
+}
+
+.color-block {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
+
+.color-block__inner {
+    display: flex;
+    align-items: center;
+}
+
+.color-block__inner h1 {
+    color: white;
+    margin-left: 20px;
 }
